fix menu going too wide in FF
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@12234 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/main-menu-drop-down.css
+++ b/content/resources/css/main-menu-drop-down.css
@@ -148,9 +148,9 @@ ul.ui-tabs-nav, #loading {
 	z-index: 4 !important;
 }
 
-ul#ft-drop-down-menu > li > a {
-	padding-right: 20px;
-	padding-left: 15px;
+html[data-theme="standard"] ul#ft-drop-down-menu > li > a {
+	padding-right: 12px !important;
+	padding-left: 8px !important;
 }
 
 ul#ft-drop-down-menu > li.ft-hasSubMenu::after {
